--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> ANIMATION LOGIN CODE</title>
+		<title> ALL BIBLE BOOKS</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="device=device-with, initial-scale=1.0">
 		<link href="Bible Font Cover.css" rel="stylesheet"/>
